# realvisiondashboardreact

./: .gitignore  README.md  package-lock.json  package.json
rust_actix_backend/: Cargo.toml  config.json  sample2a.csv  sample2b.csv
rust_actix_backend/src/: main.rs
src/: App.jsx
src/components/: Access.jsx  Loader.jsx  TimeSeriesDashboard.jsx  index.js
src/context/: RealVisionGenesisContext.jsx
src/utils/: constants.js  seedGenerator.js  traitGenerator.js
src/utils/multiRangeSlider/: MultiRangeSlider.js  multiRangeSlider.css
